[gd_scene load_steps=17 format=2]

[ext_resource path="res://Particles_playground/Temp_to_refactory/sound_hit.wav" type="AudioStream" id=1]
[ext_resource path="res://Particles_playground/Temp_to_refactory/enemy.png" type="Texture" id=2]
[ext_resource path="res://Particles_playground/Temp_to_refactory/sound_explode.wav" type="AudioStream" id=3]
[ext_resource path="res://Particles_playground/Temp_to_refactory/bullet.png" type="Texture" id=4]
[ext_resource path="res://Particles_playground/Temp_to_refactory/Plat_kinematic/Crab_Walker.gd" type="Script" id=5]
[ext_resource path="res://Particles_playground/Temp_to_refactory/Plat_kinematic/Plat_anim_kinematicdestroy.tres" type="Animation" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

<<<<<<< HEAD
[sub_resource type="Animation" id=3]
=======
[sub_resource type="Animation" id=2]
>>>>>>> Attack-Implementation
length = 6.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25, 3, 3.75, 4.5, 5.25, 6, 6.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 5, 6, 5, 6, 7, 6, 7, 5 ]
}
<<<<<<< HEAD

[sub_resource type="Animation" id=4]
=======
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
>>>>>>> Attack-Implementation
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}
<<<<<<< HEAD

[sub_resource type="CapsuleShape2D" id=5]
radius = 8.0
height = 4.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 4 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 256

[sub_resource type="ParticlesMaterial" id=9]
=======
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 4.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 4 )

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )
width = 256

[sub_resource type="ParticlesMaterial" id=10]
>>>>>>> Attack-Implementation
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 250, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 4.0
scale_random = 1.0
<<<<<<< HEAD
color_ramp = SubResource( 8 )
hue_variation = 0.05
hue_variation_random = 0.46

[node name="Crab_Walker" type="KinematicBody2D"]
collision_layer = 0
=======
color_ramp = SubResource( 9 )
hue_variation = 0.05
hue_variation_random = 0.46

[node name="Crab_Walker" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 4
>>>>>>> Attack-Implementation
collision_mask = 3
script = ExtResource( 5 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -15, -4 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 15.5, -3 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="WallDetectorFront" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Sprite" type="Sprite" parent="."]
<<<<<<< HEAD
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 1 )
rotation = 3.14159
=======
material = SubResource( 1 )
>>>>>>> Attack-Implementation
texture = ExtResource( 2 )
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = ExtResource( 6 )
<<<<<<< HEAD
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 5 )
=======
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 4 )
>>>>>>> Attack-Implementation

[node name="HitBox_L" type="Area2D" parent="." groups=[
"HitBox",
]]
<<<<<<< HEAD
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_L"]
position = Vector2( -13, 1 )
shape = SubResource( 12 )
=======
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_L"]
position = Vector2( -13, 1 )
shape = SubResource( 5 )
>>>>>>> Attack-Implementation

[node name="HitBox_R" type="Area2D" parent="." groups=[
"HitBox",
]]
position = Vector2( 26, 0 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_R"]
position = Vector2( -13, 1 )
<<<<<<< HEAD
shape = SubResource( 12 )
=======
shape = SubResource( 5 )
>>>>>>> Attack-Implementation

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -6 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -4 )
<<<<<<< HEAD
shape = SubResource( 11 )

[node name="Explosion" type="Particles2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.12 )
material = SubResource( 6 )
=======
shape = SubResource( 6 )

[node name="Explosion" type="Particles2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.12 )
material = SubResource( 7 )
emitting = false
>>>>>>> Attack-Implementation
amount = 32
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.76
draw_order = 215832976
<<<<<<< HEAD
process_material = SubResource( 9 )
=======
process_material = SubResource( 10 )
>>>>>>> Attack-Implementation
texture = ExtResource( 4 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="HitBox_L" to="." method="_on_HitBox_L_body_entered"]
[connection signal="body_entered" from="HitBox_R" to="." method="_on_HitBox_R_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
